# rovio_monitor_and_reset

./: README.md
ROVIO-optimizer/: .txt  file.txt~  optimlog (save-copy).txt  optimlog.txt  optimlog_matlab.txt  optimlog_underwater.txt  optimlog_underwater_070616.txt  roptimizer-underwater.py  roptimizer.py  roptimizer.py~  subscribernode.py  test.py  tochange (copy).info  tochange.info~  tochange.txt~
monitor/: CMakeLists.txt  CMakeLists.txt~  package.xml
monitor/monitor_node/: watchdog.py
rospy_tutorials/: CMakeLists.txt  CMakeLists.txt~
rospy_tutorials/005_add_two_ints/: watchdog.py
